--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href=""
-
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <!-- Custom CSS -->
-    
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel=""
 
 </head>
 <body>
