--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
 
         </div>
 
+        <div class="profession-container">
+            <div class="profession-box">
+                <div class="profession" style="--i:0;">
+                    <i class='bx bx-code-alt'></i>
+                    <h3>Web Developer</h3>
+                </div>
+                <div class="profession" style="--i:1;">
+                    <i class='bx bx-palette' ></i>
+                    <h3>UX / UI Designer</h3>
+                </div>
+                <div class="profession" style="--i:2;">
+                    <i class='bx bxs-graduation' ></i>
+                    <h3>College Student</h3>
+                </div>
+                <div class="profession" style="--i:3;">
+                    <i class='bx bxl-flutter'></i>
+                    <h3>Flutter Developer</h3>
+                </div>
+            </div>
+        </div>
+
         
     </section>
 
