--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
                     <i class='bx bxl-flutter'></i>
                     <h3>Flutter Developer</h3>
                 </div>
+                <div class="circle"></div>
             </div>
+            <div class="overlay"></div>
         </div>
+
+       
+
 
         
     </section>
