--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     ducimus quas obcaecati sint distinctio at. Totam aspernatur
                     eius eum? Deleniti consequuntur cumque ipsam sunt.
                 </p>
+                <a href="#" class="btn"></a>
             </div>
         </section>
     </section>
