About Section Finish

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             </div>
             <div class="overlay"></div>
         </div>
-
         <div class="home-img">
             <img src="assets/home_img_rotated.png" alt="" />
         </div>
-
+        </section>
+       
         <!-- About Section  -->
         <section class="about" id="about">
             <div class="about-img">
@@ -98,7 +98,7 @@
                     ducimus quas obcaecati sint distinctio at. Totam aspernatur
                     eius eum? Deleniti consequuntur cumque ipsam sunt.
                 </p>
-                <a href="#" class="btn"></a>
+                <a href="#" class="btn">Learn More</a>
             </div>
         </section>
     </section>
