--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
         </section>
     </section>
 
+    <!-- Services Section Design -->
+    <section class="services" id="services">
+        <h2 class="heading">My <span>Services</span></h2>
+        <div class="services-container">
+            <div class="services-box">
+                
+            </div>
+        </div>
+    </section>
+
+
     <script src="js/index.js"></script>
     <body></body>
 </html>
