--- a/index.html
+++ b/index.html
@@ -81,26 +81,25 @@
         <div class="home-img">
             <img src="assets/home_img_rotated.png" alt="" />
         </div>
-        </section>
-       
-        <!-- About Section  -->
-        <section class="about" id="about">
-            <div class="about-img">
-                <img src="assets/about_img.png" alt="" />
-            </div>
+    </section>
 
-            <div class="about-content">
-                <h2 class="heading">About <span>Me</span></h2>
-                <h3>Hi! I'm here to help your next Project!</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Magnam molestias autem illo laboriosam, aut quibusdam
-                    ducimus quas obcaecati sint distinctio at. Totam aspernatur
-                    eius eum? Deleniti consequuntur cumque ipsam sunt.
-                </p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-        </section>
+    <!-- About Section  -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="assets/about_img.png" alt="" />
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Hi! I'm here to help your next Project!</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                molestias autem illo laboriosam, aut quibusdam ducimus quas
+                obcaecati sint distinctio at. Totam aspernatur eius eum?
+                Deleniti consequuntur cumque ipsam sunt.
+            </p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
     </section>
 
     <!-- Services Section Design -->
@@ -108,11 +107,38 @@
         <h2 class="heading">My <span>Services</span></h2>
         <div class="services-container">
             <div class="services-box">
-                
+                <i class="bx bx-code-alt"></i>
+                <h3>Web Development</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quas consequuntur autem, maxime iste ratione dolorem at
+                    magni, adipisci voluptas numquam distinctio culpa illo neque
+                    quasi blanditiis quaerat sapiente voluptatibus cum?
+                </p>
+                <a href="" class="btn">Read More</a>
+            <div class="services-box">
+                <i class="bx bx-palette"></i>
+                <h3>UX / UI Designer</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quas consequuntur autem, maxime iste ratione dolorem at
+                    magni, adipisci voluptas numquam distinctio culpa illo neque
+                    quasi blanditiis quaerat sapiente voluptatibus cum?
+                </p>
+                <a href="" class="btn">Read More</a>
+            <div class="services-box">
+                <i class="bx bxl-flutter"></i>
+                <h3>Flutter Developer</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quas consequuntur autem, maxime iste ratione dolorem at
+                    magni, adipisci voluptas numquam distinctio culpa illo neque
+                    quasi blanditiis quaerat sapiente voluptatibus cum?
+                </p>
+                <a href="" class="btn">Read More</a>
             </div>
         </div>
     </section>
-
 
     <script src="js/index.js"></script>
     <body></body>
