--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     quasi blanditiis quaerat sapiente voluptatibus cum?
                 </p>
                 <a href="" class="btn">Read More</a>
+            </div>
             <div class="services-box">
                 <i class="bx bx-palette"></i>
                 <h3>UX / UI Designer</h3>
@@ -126,6 +127,7 @@
                     quasi blanditiis quaerat sapiente voluptatibus cum?
                 </p>
                 <a href="" class="btn">Read More</a>
+            </div>
             <div class="services-box">
                 <i class="bx bxl-flutter"></i>
                 <h3>Flutter Developer</h3>
