--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <!-- Services Section Design -->
+    <!-- Services Section Design Finish-->
     <section class="services" id="services">
         <h2 class="heading">My <span>Services</span></h2>
         <div class="services-container">
