--- a/index.html
+++ b/index.html
@@ -142,6 +142,60 @@
         </div>
     </section>
 
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Project</span></h2>
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="assets/portfolio1.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <a href="#"><i class="bx bx-link-external"></i></a>
+            </div>
+            <div class="portfolio-box">
+                <img src="assets/portfolio2.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <a href="#"><i class="bx bx-link-external"></i></a>
+            </div>
+            <div class="portfolio-box">
+                <img src="assets/portfolio3.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <a href="#"><i class="bx bx-link-external"></i></a>
+            </div>
+            <div class="portfolio-box">
+                <img src="assets/portfolio4.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <a href="#"><i class="bx bx-link-external"></i></a>
+            </div>
+            <div class="portfolio-box">
+                <img src="assets/portfolio5.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <a href="#"><i class="bx bx-link-external"></i></a>
+            </div>
+            <div class="portfolio-box">
+                <img src="assets/portfolio6.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <a href="#"><i class="bx bx-link-external"></i></a>
+            </div>
+        </div>
+    </section>
+
     <script src="js/index.js"></script>
     <body></body>
 </html>
