--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </section>
 
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Project</span></h2>
+        <h2 class="heading">Latest <span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
                 <img src="assets/portfolio1.jpg" alt="">
