Portfolio Layer Animation

--- a/index.html
+++ b/index.html
@@ -146,52 +146,70 @@
         <h2 class="heading">Latest <span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="assets/portfolio1.jpg" alt="">
+                <img src="assets/portfolio1.jpg" alt="" />
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
-                <a href="#"><i class="bx bx-link-external"></i></a>
             </div>
             <div class="portfolio-box">
-                <img src="assets/portfolio2.jpg" alt="">
+                <img src="assets/portfolio2.jpg" alt="" />
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
-                <a href="#"><i class="bx bx-link-external"></i></a>
             </div>
             <div class="portfolio-box">
-                <img src="assets/portfolio3.jpg" alt="">
+                <img src="assets/portfolio3.jpg" alt="" />
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
-                <a href="#"><i class="bx bx-link-external"></i></a>
             </div>
             <div class="portfolio-box">
-                <img src="assets/portfolio4.jpg" alt="">
+                <img src="assets/portfolio4.jpg" alt="" />
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
-                <a href="#"><i class="bx bx-link-external"></i></a>
             </div>
             <div class="portfolio-box">
-                <img src="assets/portfolio5.jpg" alt="">
+                <img src="assets/portfolio5.jpg" alt="" />
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
-                <a href="#"><i class="bx bx-link-external"></i></a>
             </div>
             <div class="portfolio-box">
-                <img src="assets/portfolio6.jpg" alt="">
+                <img src="assets/portfolio6.jpg" alt="" />
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
-                <a href="#"><i class="bx bx-link-external"></i></a>
             </div>
         </div>
     </section>
