--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
         </div>
     </section>
 
+    <!-- Testimonial Design -->
+
+    <div class="testimonial-container">
+        <h2 class="heading">Valuable <span>Testimonial</span></h2>
+    </div>
+
+
     <script src="js/index.js"></script>
     <body></body>
 </html>
