Slide Design and Import Swiper

--- a/index.html
+++ b/index.html
@@ -218,7 +218,33 @@
 
     <div class="testimonial-container">
         <h2 class="heading">Valuable <span>Testimonial</span></h2>
+
+        <div class="testimonial-wrapper">
+            <div class="testimonal-box mySwiper">
+                <div class="testimonial-content swiper-wrapper">
+                    <div class="testimonial-slide swiper-slide">
+                        <img src="assets/testimonial1.jpg" alt="" />
+                        <h3>Jackson Levi</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Perspiciatis, molestias quod ad nulla
+                            voluptatibus error aperiam impedit dolores, facilis
+                            illum adipisci, quae voluptatum amet quis vitae
+                            incidunt corrupti illo ea. Lorem ipsum dolor sit
+                            amet consectetur adipisicing elit. Veritatis placeat
+                            nobis iure molestias, saepe dolore sint odit?
+                            Suscipit harum maxime ex, magnam perferendis ratione
+                            sapiente. Odio iure eum sunt ducimus?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <!-- Swiper JS  -->
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 
     <script src="js/index.js"></script>
