--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
                         </p>
                     </div>
                 </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </div>
