--- a/index.html
+++ b/index.html
@@ -300,6 +300,17 @@
 
     </section>
 
+    <!-- Footer Design -->
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Made with 🤍 by Simon Calderon | Academlo Portfolio Project </p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+        </div>
+    </footer>
+
     <!-- Swiper JS  -->
     
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
