Add version number to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/styles.css" />
     </head>
-
+    <!-- vesion 1.0.0 -->
     <!-- Header Design -->
 
     <header class="header">
