--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
-        <div class="bx bx-abacus" id="darkMode-icon"></div>
+        <div class="bx bx-moon" id="darkMode-icon"></div>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
 
