Update Flutter developer description

--- a/index.html
+++ b/index.html
@@ -133,10 +133,7 @@
                 <i class="bx bxl-flutter"></i>
                 <h3>Flutter Developer</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Quas consequuntur autem, maxime iste ratione dolorem at
-                    magni, adipisci voluptas numquam distinctio culpa illo neque
-                    quasi blanditiis quaerat sapiente voluptatibus cum?
+                    Soy un developer 
                 </p>
                 <a href="" class="btn">Read More</a>
             </div>
